# oraclex-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
docs/: design.md  examples.md  oracle_risk.md
examples/: high_volatility.json  simple_eth_oracle.json
src/: config.rs  main.rs  report.rs  types.rs
src/engine/: metrics.rs  mod.rs  simulator.rs
src/math/: fixed.rs  mod.rs
src/oracle/: ema.rs  mod.rs  spot.rs  twap.rs
